Revision history for Test::PDL

{{$NEXT}}

0.12      2015-06-23

 - the tests started failing with recent versions of PDL; should be fixed now
   (Edward Baudrez)

0.11      2014-11-19

 - tweaked the tests so they also pass with the latest development versions of
   Test::Builder (Edward Baudrez)

0.10      2013-12-03

 - now querying PDL for the available types, instead of enumerating types
   explicitly. This should result in test_indx() being available on PDL
   2.006_91 or later, allowing tests for PDL with the new PDL_Indx data type
   (Edward Baudrez)

0.09      2013-07-02

 - fixed the tests to work with the latest development release of PDL
   (2.006_03) (Edward Baudrez)

0.08      2013-03-15

 - added tests involving null piddles (Edward Baudrez)
 - try to work around a warning message generated by List::MoreUtils 0.33_005
   which made the tests fail on platforms with this version (Edward Baudrez)

0.07      2013-02-12

 - try to work around spurious warning messages emitted in some tests (Edward
   Baudrez)
 - include version of List::MoreUtils and File::Map in test output in order to
   track down unexpected test failures on some platforms (Edward Baudrez)

0.06      2012-12-07

 - fixed unexpected test failure: references can stringify to negative numbers!
   (Edward Baudrez)
 - diagnose a possible problem in the arguments:
	is_pdl hist( pdl(2,3,4,5) ), pdl(1,1,1,1);
   hist() returns two piddles in list context, leaving the expected value
   pdl(1,1,1,1) in the third place as the test name. As this is most likely not
   what the user wanted, an error is raised when this is detected (Edward
   Baudrez)

0.05      2012-11-20

 - the first non-trial release; nothing has actually changed in the
   distribution except the version number (Edward Baudrez)

0.04      2012-10-11

 - added a function eq_pdl() to compare two piddles, without performing an
   actual test. If you've been wanting to compare two piddles outside of a test